--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "unfulvio/wp-api-menus",
-  "description": "Extends WordPress WP API with menu routes.",
+  "name": "humanmade/wp-api-menus",
+  "description": "Extends WordPress WP API with menu routes. HM Fork",
   "type": "wordpress-plugin",
   "version": "1.3.1",
   "keywords": ["wordpress", "wp", "wp-api", "wp-rest-api", "api", "json"],
