--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wp-api-menus",
-  "title": "WP API Menus",
-  "description": "Extends the WordPress JSON REST WP API with new routes pointing to WordPress menus.",
+  "name": "hm-wp-api-menus",
+  "title": "HM WP API Menus",
+  "description": "Extends the WordPress JSON REST WP API with new routes pointing to WordPress menus. Human Made Fork.",
   "version": "1.3.1",
   "license": "GPL-2.0+",
   "homepage": "https://wordpress.org/plugins/wp-api-menus",
